--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <script src="https://kit.fontawesome.com/fa32beba61.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -25,17 +26,17 @@
             <a href="index.html"><img src="images/Background.png" alt="logo"></a>
         </div>
         <div class="icon-part1">
-            <div class="uicon">
-                <img src="images/icons8-user-30.png" alt="user">
+            <div class="login">
+                <i class="fa fa-solid fa-user" aria-hidden="true"></i>
+                <a href="">LOGIN</a>
             </div>
-            <div class="uicon">
-                <img src="images/icons8-tracking-32.png" alt="locat">
+            <div class="track">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <a href="">Track Order</a>
             </div>
-            <div class="uicon">
-                <img src="images/icons8-shopping-cart-30.png" alt="cart">
-            </div>
-            <div class="uicon">
-                <img src="images/icons8-heart-30.png" alt="wish">
+            <div class="deals">
+                <i class="fa fa-duotone fa-cart-shopping" aria-hidden="true"></i>
+                <a href="">CART</a>
             </div>
         </div>
     </div>
@@ -45,11 +46,64 @@
         </div>
         <nav id="nav">
             <ul>
-                <li id="cat"><a href="#">Categories</a></li>
+                <li><a href="#">Categories</a>
+                    <div class="catagory-menu">
+                        <a href="">
+                            <img src="images/cpu-150x150.png" alt="">
+                            Processor
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/motherboard-3-150x150.png" alt="">
+                            Mother board
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/cabinet-150x150.png" alt="">
+                            PC Cabinet
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/graphics-card-150x150.png" alt="">
+                            Graphics card
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/fan-150x150.png" alt="">
+                            CPU Cooler
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/ssd-drive-150x150.png" alt="">
+                            SSD
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/ram-3-150x150.png" alt="">
+                            RAM
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/power-supply-1-150x150.png" alt="">
+                            Power Supply
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/mouse-3-150x150.png" alt="">
+                            Mouse
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                        <a href=""><img src="images/keyboard-3-150x150.png" alt="">
+                            Keyboard
+                            <i class="arr-style fa right-arrow fa-angle-right" aria-hidden="true"
+                                style="font-size: 25px;"></i>
+                        </a>
+                    </div>
+                </li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Brands</a></li>
-                <li>
-                    <a href="#">Gaming</a>
+                <li><a href="#">Gaming</a>
                     <div class="magamenu1">
                         <div class="magamenu1-item1">
                             <h3>GAMING MOUSE</h3>
@@ -222,7 +276,7 @@
                         <div class="product">
                             <div class="badge">20% off</div>
                             <div class="product-tumb">
-                                <img src="images/amd-ryzen-9.webp" alt="">
+                                <img src="images/intel-core-i7-11700kf-processor-1000x1000.webp" alt="">
                             </div>
                             <div class="product-details">
                                 <span class="product-catagory">Processor</span>
@@ -240,7 +294,7 @@
                         <div class="product">
                             <div class="badge">20% off</div>
                             <div class="product-tumb">
-                                <img src="image/feature_3.png" alt="">
+                                <img src="images/intel-core-i7-11700kf-processor-1000x1000.webp" alt="">
                             </div>
                             <div class="product-details">
                                 <span class="product-catagory">Processor</span>
@@ -258,7 +312,7 @@
                         <div class="product">
                             <div class="badge">20% off</div>
                             <div class="product-tumb">
-                                <img src="image/feature_3.png" alt="">
+                                <img src="images/Intel-Core-i3-1005G1.jpg" alt="">
                             </div>
                             <div class="product-details">
                                 <span class="product-catagory">Processor</span>
@@ -276,7 +330,7 @@
                         <div class="product">
                             <div class="badge">20% off</div>
                             <div class="product-tumb">
-                                <img src="image/feature_3.png" alt="">
+                                <img src="images/INTEL-_I3_6098p-2.jpg" alt="">
                             </div>
                             <div class="product-details">
                                 <span class="product-catagory">Processor</span>
@@ -294,7 +348,7 @@
                         <div class="product">
                             <div class="badge">20% off</div>
                             <div class="product-tumb">
-                                <img src="image/feature_3.png" alt="">
+                                <img src="images/i3-7100-4-270x270.jpg" alt="">
                             </div>
                             <div class="product-details">
                                 <span class="product-catagory">Processor</span>
@@ -311,7 +365,7 @@
                         <div class="product">
                             <div class="badge">20% off</div>
                             <div class="product-tumb">
-                                <img src="image/feature_3.png" alt="">
+                                <img src="images/233116976.jpeg" alt="">
                             </div>
                             <div class="product-details">
                                 <span class="product-catagory">Processor</span>
@@ -341,6 +395,7 @@
             <img src="images/800x300.webp" alt="" style="width:100%">
         </div>
     </section>
+    
 </body>
 <script src="script.js"></script>
 <script type="text/javascript" src="productslide.js"></script>
