--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             </ul>
             <div class="searchbar">
                 <form>
+                    <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" placeholder="Search..">
                     <button type="submit" class="searchbar-btn">Search</button>
