--- a/dfds.html
+++ b/dfds.html
@@ -125,7 +125,66 @@
                 <li><a href="">Home</a></li>
                 <li><a href="">Brands<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
                 <li><a href="">Gaming<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a>
-                    
+                    <div class="mega-menu fadeIn animated">
+                        <div class="mm-6column">
+                            <span class="left-images">
+                                <img src="images/gaming-keyboards.jpg">
+                                <p>Most Popular Styles </p>
+                            </span>
+                        </div>
+                        <div class="mm-3column">
+                            <span class="categories-list">
+                                <ul>
+                                    <span class="clspan">Gaming Mouse</span>
+                                    <hr>
+                                    <li class="li">Wireless Mouse</li>
+                                    <li class="li">Wire Mouse</li>
+                                    <li class="li">Bluetooth Mouse</li>
+                                    <li class="li">Wireless + Bluetooth Mouse</li>
+                                    <li class="li"><a class="mm-view-more" href="#">View more →</a></li>
+                                </ul>
+                            </span>
+                        </div>
+                        <div class="mm-3column">
+                            <span class="categories-list">
+                                <ul>
+                                    <span class="clspan">Gaming Keyboard</span>
+                                    <hr>
+                                    <li class="li">Wireless Keyboard</li>
+                                    <li class="li">Wire Keyboard</li>
+                                    <li class="li">Bluetooth Keyboard</li>
+                                    <li class="li">Wireless + Bluetooth Keyboard</li>
+                                    <li class="li"><a class="mm-view-more" href="#">View more →</a></li>
+                                </ul>
+                            </span>
+                        </div>
+                        <div class="mm-3column">
+                            <span class="categories-list">
+                                <ul>
+                                    <span class="clspan">Gaming Headsets</span>
+                                    <hr>
+                                    <li class="li">Wireless Headset</li>
+                                    <li class="li">Wire Headset</li>
+                                    <li class="li">Bluetooth Headset</li>
+                                    <li class="li">Wireless + Bluetooth Headset</li>
+                                    <li class="li"><a class="mm-view-more" href="#">View more →</a></li>
+                                </ul>
+                            </span>
+                        </div>
+                        <div class="mm-3column">
+                            <span class="categories-list">
+                                <ul>
+                                    <span class="clspan">Gaming Mousepads</span>
+                                    <hr>
+                                    <li class="li">Small Mousepad</li>
+                                    <li class="li">Medium Mousepad</li>
+                                    <li class="li">Large Mousepad</li>
+                                    <li class="li">XL Mousepad</li>
+                                    <li class="li"><a class="mm-view-more" href="#">View more →</a></li>
+                                </ul>
+                            </span>
+                        </div>
+                    </div>
                 </li>
                 <li><a href="">Components<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
                 <li><a href="">PC builds</i></a></li>
