--- a/new.html
+++ b/new.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,22 +9,61 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <title>Document</title>
 </head>
+
 <body>
-    <div class="catagory-menu">
-        <a href="">
-            <img src="images/cpu-150x150.png" alt="">
-            Processor
-            <p class="arr-style">&#9655;</p>
-        </a>
-        <a href=""><img src="images/motherboard-3-150x150.png" alt=""> Mother board <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/cabinet-150x150.png" alt=""> PC Cabinet <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/graphics-card-150x150.png" alt=""> Graphics card <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/fan-150x150.png" alt=""> CPU Cooler <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/ssd-drive-150x150.png" alt=""> SSD <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/ram-3-150x150.png" alt=""> RAM <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/power-supply-1-150x150.png" alt=""> Power Supply <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/mouse-3-150x150.png" alt=""> Mouse <p class="arr-style">&#9655;</p></a>
-        <a href=""><img src="images/keyboard-3-150x150.png" alt=""> Keyboard <p class="arr-style">&#9655;</p></a>
+    <div class="mega-menu fadeIn animated">
+        <div class="mm-6column">
+            <span class="left-images">
+                <img
+                    src="https://4.bp.blogspot.com/-faF-AemPFUM/U4ryP7pQRsI/AAAAAAAAEvA/fZ-hskCSln4/s1600/Magento%2Bthemes.jpg">
+                <p>Most Popular Styles </p>
+            </span>
+            <span class="categories-list">
+                <ul>
+                    <span class="clspan">Computer</span>
+                    <li class="li">Desktops</li>
+                    <li class="li">Laptops</li>
+                    <li class="li">Tablets</li>
+                    <li class="li">Monitors</li>
+                    <li class="li">Networking Printers</li>
+                    <li class="li">Scanners</li>
+                    <li class="li">Jumpers & Cardigans</li>
+                    <li class="li"><a class="mm-view-more" href="#">View more →</a></li>
+                </ul>
+            </span>
+
+        </div>
+        <div class="mm-3column">
+            <span class="categories-list">
+                <ul>
+                    <span class="clspan">TV & Video</span>
+                    <li class="li">LED TVs
+                    <li class="li">Plasma TVs
+                    <li class="li">3D TVs
+                    <li class="li">DVD & Blu-ray Players
+                    <li class="li">Home Theater Systems
+                    <li class="li">Cell Phones
+                    <li class="li">Apple iPhone
+                    <li class="li"><a class="mm-view-more" href="#">View more →</a></li>
+                </ul>
+            </span>
+        </div>
+        <div class="mm-3column">
+            <span class="categories-list">
+                <ul>
+                    <span class="clspan">Car Electronics</span>
+                    <li class="li">GPS & Navigation</li>
+                    <li class="li">In-Dash Stereos</li>
+                    <li class="li">Speakers</li>
+                    <li class="li">Subwoofers</li>
+                    <li class="li">Amplifiers</li>
+                    <li class="li">MP3 Players</li>
+                    <li class="li">iPods</li>
+                    <li class="li"><a class="mm-view-more" href="#">View more →</a></li>
+                </ul>
+            </span>
+        </div>
     </div>
 </body>
+
 </html>
